--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EMIX YAWL</title>
+  <title>EMIX OFFICIAL WEBSITE</title>
   <style>
     * {
       margin: 0;
@@ -198,7 +198,7 @@
   <div class="main" id="main">
     <!-- Background Video -->
     <video class="bg" autoplay loop mute>
-      <source src="https://qu.ax/PYvQU.mp4" type="video/mp4">
+      <source src="assets/" type="video/mp4">
     </video>
 
     <!-- Teks Berjalan -->
