--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <div class="main" id="main">
     <!-- Background Video -->
     <video class="bg" autoplay loop mute>
-      <source src="assets/" type="video/mp4">
+      <source src="assets/" type="bg.mp4">
     </video>
 
     <!-- Teks Berjalan -->
