--- a/index.html
+++ b/index.html
@@ -197,8 +197,9 @@
   <!-- Main -->
   <div class="main" id="main">
     <!-- Background Video -->
-    <video class="bg" autoplay loop mute>
-      <source src="assets/" type="bg.mp4">
+    <video class="bg" autoplay muted loop playsinline>
+  <source src="https://github.com/Emixdev/Linktree/tree/3067294193ef1ab4da2371ec4f9b4d3c767377ec/assets">
+  Browser lu gak support video background.
     </video>
 
     <!-- Teks Berjalan -->
