--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
   <div class="main" id="main">
     <!-- Background Video -->
     <video class="bg" autoplay muted loop playsinline>
-  <source src="https://github.com/Emixdev/Linktree/tree/3067294193ef1ab4da2371ec4f9b4d3c767377ec/assets">
-  Browser lu gak support video background.
-    </video>
+  <source src="assets/bg.mp4" type="video/mp4">
+  Browser tidak mendukung pemutaran video.
+</video>
 
     <!-- Teks Berjalan -->
     <div class="marquee">
