--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <!-- Main -->
   <div class="main" id="main">
     <!-- Background Video -->
-    <video class="bg" autoplay mute loop>
+    <video class="bg" autoplay playsinline mute loop>
   <source src="assets/bg.mp4" type="video/mp4">
   Browser tidak mendukung pemutaran video.
 </video>
